[package]
name = "pitch_quantizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
egui-baseview = "0.0.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", version = "0.0.0" }
realfft = "3.3.0"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]
